fix spacing of notifications

--- a/app/assets/stylesheets/page-layout.scss
+++ b/app/assets/stylesheets/page-layout.scss
@@ -20,7 +20,7 @@
 
 #content-wrapper {
   width: 100%;
-  margin-top: 55px;
+  margin-top: 56px;
 }
 
 #app-body {
